Fix bug z-index

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -177,6 +177,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 .modal-content {
